--- a/locales/tw.json
+++ b/locales/tw.json
@@ -48,6 +48,8 @@
   "y2mateReset": "Y2Mate 已重設為預設值",
   "youtubeSettings": "YouTube + 設定",
   "takeScreenshot": "擷取螢幕截圖",
+  "screenshotSaved": "截圖已儲存",
+  "screenshotFailed": "截圖失敗",
   "downloadOptions": "下載選項",
   "byYTDL": "by YTDL",
   "copiedToClipboard": "影片 URL 已複製到剪貼簿！",
