--- a/locales/cn.json
+++ b/locales/cn.json
@@ -104,6 +104,7 @@
   "updateAvailableTitle": "YouTube + 更新可用",
   "version": "版本",
   "newFeatures": "新功能和改进",
+  "changelogHeader": "更新日志",
   "installUpdate": "安装更新",
   "later": "稍后",
   "enhancedExperience": "具有强大功能的增强型 YouTube 体验",
