--- a/locales/du.json
+++ b/locales/du.json
@@ -103,6 +103,7 @@
   "updateAvailableTitle": "YouTube + Update beschikbaar",
   "version": "Versie",
   "newFeatures": "Nieuwe functies en verbeteringen",
+  "changelogHeader": "Wijzigingslog",
   "installUpdate": "Update installeren",
   "later": "Later",
   "enhancedExperience": "Verbeterde YouTube-ervaring met krachtige functies",
