--- a/locales/fr.json
+++ b/locales/fr.json
@@ -105,6 +105,7 @@
   "updateAvailableTitle": "Mise à jour YouTube + disponible",
   "version": "Version",
   "newFeatures": "Nouvelles fonctionnalités et améliorations",
+  "changelogHeader": "Journal des modifications",
   "installUpdate": "Installer la mise à jour",
   "later": "Plus tard",
   "enhancedExperience": "Expérience YouTube améliorée avec des fonctionnalités puissantes",
