--- a/locales/jp.json
+++ b/locales/jp.json
@@ -105,6 +105,7 @@
   "updateAvailableTitle": "YouTube + アップデート利用可能",
   "version": "バージョン",
   "newFeatures": "新機能と改善",
+  "changelogHeader": "変更履歴",
   "installUpdate": "アップデートをインストール",
   "later": "後で",
   "enhancedExperience": "強力な機能による強化された YouTube 体験",
