--- a/locales/kr.json
+++ b/locales/kr.json
@@ -105,6 +105,7 @@
   "updateAvailableTitle": "YouTube + 업데이트 사용 가능",
   "version": "버전",
   "newFeatures": "새로운 기능 및 개선사항",
+  "changelogHeader": "변경 로그",
   "installUpdate": "업데이트 설치",
   "later": "나중에",
   "enhancedExperience": "강력한 기능으로 향상된 YouTube 경험",
