--- a/locales/ru.json
+++ b/locales/ru.json
@@ -124,6 +124,7 @@
   "updateAvailableMsg": "Доступно обновление {version}!",
   "upToDateMsg": "Вы используете последнюю версию ({version})",
   "updateCheckFailed": "Проверка обновлений не удалась: {msg}",
+  "changelogHeader": "Список изменений",
   "noUpdateInfo": "Информация об обновлении недоступна",
   "dismiss": "Закрыть",
   "privacy": "Отправляя, вы соглашаетесь включить указанную информацию. Не включайте пароли или личные токены",
