--- a/locales/tr.json
+++ b/locales/tr.json
@@ -103,6 +103,7 @@
   "updateAvailableTitle": "YouTube + Güncellemesi Mevcut",
   "version": "Sürüm",
   "newFeatures": "Yeni özellikler ve iyileştirmeler",
+  "changelogHeader": "Değişiklikler",
   "installUpdate": "Güncellemeyi Yükle",
   "later": "Daha sonra",
   "enhancedExperience": "Güçlü özelliklerle geliştirilmiş YouTube deneyimi",
