--- a/locales/tw.json
+++ b/locales/tw.json
@@ -104,6 +104,7 @@
   "updateAvailableTitle": "YouTube + 更新可用",
   "version": "版本",
   "newFeatures": "新功能和改進",
+  "changelogHeader": "更新日誌",
   "installUpdate": "安裝更新",
   "later": "稍後",
   "enhancedExperience": "具有強大功能的增強型 YouTube 體驗",
